--- a/Flx.Testing/Flx.Testing.csproj
+++ b/Flx.Testing/Flx.Testing.csproj
@@ -7,4 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.5.1" />
+    <PackageReference Include="NUnit" Version="3.13.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Flx.Domain\Flx.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
