starting study test

--- a/Flx.test/Flx.test.csproj
+++ b/Flx.test/Flx.test.csproj
@@ -8,8 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.5.1" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Flx.Domain\Flx.Domain.csproj" />
   </ItemGroup>
 
 </Project>
