changed auth structure and implemented validations

--- a/Flx.Domain/Flx.Domain.csproj
+++ b/Flx.Domain/Flx.Domain.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.16.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Flx.Shared\Flx.Shared.csproj" />
   </ItemGroup>
 
