changed the jwt scret key to appsettings

--- a/FlxApi/appsettings.json
+++ b/FlxApi/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=QAT-BR-GZYVP33;Database=CourseFlx;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JWTSettings": {
+    "SecretKey": "MySuperSecretSecurityKeyDoNotShare"
   }
 }
