--- a/Flx.Data/Flx.Infrastructure.csproj
+++ b/Flx.Data/Flx.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Flx.Domain\Flx.Domain.csproj" />
+    <ProjectReference Include="..\Flx.Shared\Flx.Shared.csproj" />
   </ItemGroup>
 
 </Project>
