--- a/FlxApi/Flx.Api.csproj
+++ b/FlxApi/Flx.Api.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Flx.Data\Flx.Infrastructure.csproj" />
+    <ProjectReference Include="..\Flx.Domain\Flx.Domain.csproj" />
   </ItemGroup>
 
 </Project>
