upgraded to .net7 and changed layers name

--- a/Flx.Data/Flx.Data.csproj
+++ b/Flx.Data/Flx.Data.csproj
@@ -2,18 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper.SqlBuilder" Version="2.0.78" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Flx.Domain\Flx.Domain.csproj" />
+    <ProjectReference Include="..\Flx.Domain\Flx.Core.csproj" />
     <ProjectReference Include="..\Flx.Shared\Flx.Shared.csproj" />
   </ItemGroup>
 
