--- a/FlxApi/Flx.Api.csproj
+++ b/FlxApi/Flx.Api.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
@@ -14,8 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Flx.Data\Flx.Infrastructure.csproj" />
-    <ProjectReference Include="..\Flx.Domain\Flx.Domain.csproj" />
+    <ProjectReference Include="..\Flx.Data\Flx.Data.csproj" />
+    <ProjectReference Include="..\Flx.Domain\Flx.Core.csproj" />
   </ItemGroup>
 
 </Project>
