--- a/FlxApi/appsettings.Development.json
+++ b/FlxApi/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=CourseFlx;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JWTSettings": {
+    "SecretKey": "MySuperSecretSecurityKeyDoNotShare"
   }
 }
