--- a/FlxApi/appsettings.json
+++ b/FlxApi/appsettings.json
@@ -5,11 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=QAT-BR-GZYVP33;Database=CourseFlx;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "JWTSettings": {
-    "SecretKey": "MySuperSecretSecurityKeyDoNotShare"
-  }
+  "AllowedHosts": "*"
 }
