--- a/Flx.testing/Flx.testing.csproj
+++ b/Flx.testing/Flx.testing.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Flx.Domain\Flx.Domain.csproj" />
+    <ProjectReference Include="..\Flx.Domain\Flx.Core.csproj" />
   </ItemGroup>
 
 </Project>
